@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Don&apos;t allow to search binary fields.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1288,7 +1288,7 @@
    <date>2011-08-30</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Don&apos;t allow to search binary fields.
    </notes>
   </release>
  </changelog>
