@@ -2,6 +2,7 @@
 v3.0.9-git
 ----------
 
+[jan] Don't allow to search binary fields.
 
 
 ------
